--- a/css/index.css
+++ b/css/index.css
@@ -109,4 +109,4 @@ button:active{
 #biger{position: absolute;width: auto;height: auto;left: 360px;top: 300px;font-size: 18px;font-weight: normal;}
 #little{position: absolute;width: auto;height: auto;left: 410px;top: 300px;font-size: 18px;font-weight: normal;}
 #sendmsg{margin-left: 20px;font-size: 13px;color: green;}
-.subtitle{font-size: 13px;color: #999;text-align: center;padding-bottom: 15px; }
+.subtitle{font-size: 13px;color: #999;text-align: center;padding-bottom: 15px; color:#05c5c7;}
